<resources>
    <string name="app_name">Sensor Explorer</string>
    <string name="sensor_list">Sensors</string>
    <string name="sensor_examples">Examples</string>
    <string name="sensor_count_menu">Sensor count</string>
    <string name="sensor_snackbar_text">Sensor count: %d</string>
    <string name="sensor_find_online">Find sensor online</string>
    <string name="name">Name</string>
    <string name="vendor">Vendor</string>
    <string name="type_code">Type code</string>
    <string name="type">Type</string>
    <string name="id">Identifier</string>
    <string name="max_delay">Max delay</string>
    <string name="min_delay">Min delay</string>
    <string name="maximum_range">Maximum range</string>
    <string name="power">Power</string>
    <string name="resolution">Resolution</string>
    <string name="version">Version</string>
    <string name="is_wakeup">Is wakeup</string>
    <string name="is_dynamic">Is dynamic</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="proximity">Proximity</string>
    <string name="light">Light</string>
    <string name="rotation">Rotation</string>
    <string name="sensor_missing">No such sensor</string>
    <string name="light_sensor_text">Light value</string>
    <string name="proximity_sensor_text">Proximity value</string>
    <string name="accelerometer_sensor_text">Accelerometer value</string>
    <string name="rotation_sensor_text">Rotation value</string>
    <string name="reset_chart">Reset chart</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
</resources>